#![feature(bigint_helper_methods)]

[package]
name = "pingtel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24.1"
crc32fast = "1.3.2"
libc = "0.2.126"
pcap = "0.9.2"

[dependencies.pnet]
version = "0.30.0"

