#![feature(bigint_helper_methods)]

[package]
name = "pingu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
pcap = "0.9.2"
tokio = { version = "1", features = ["full"] }
default-net = "0.11.0"
nom = "7"
